compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/namedFun.kt
<!NON_MEMBER_FUNCTION_NO_BODY!>fun bar()<!>
